flask/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-example-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-example
  template:
    metadata:
      labels:
        app: flask-example
    spec:
      containers:
      - name: flask-example
        image: janakisasidhar1/flask-example:latest
        ports:
        - containerPort: 5000
