flask/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask-example
  name: flask-example
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: flask-example
  type: ClusterIP
