flask/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-example
  annotations:
    traefik.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: flask.localhost.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-example
            port:
              number: 5000
